fixed some things

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -33,7 +33,7 @@
             <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">CHRISTINE Y. CAHILL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">MATTHEW Q. CLARIDA</a></p>
             <div id='header-image'></div>
         </div>
-                <div id="article-contents" class="white">
+                <div class="article-contents white">
                     <section>
                         <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
          
@@ -61,9 +61,11 @@
                         <a class="section-anchor" id="golden-years"></a>
                         <h2 class="pt-serif">THE GOLDEN YEARS: JACK MEYER AND THE ‘YALE MODEL’ </h2>
                         <p>Today, HMC is closer to average than it has been in a long time. In two of the last four fiscal years, the company has posted returns that have trailed the average reported by the National Association of College and University Business Officers—an organization that conducts an annual survey that included more than 800 schools in 2013. In three of these years, moreover, HMC has performed below the national average for endowments worth more than $1 billion. </p>
-
-                        <div id="container" ></div>
-
+                    </section>
+                </div>
+                <div id="container" ></div>
+                <div class="article-contents">
+                    <section>
                         <p>HMC has also lagged behind other large endowments in recent years. In FY 2012, Yale posted a return of 4.7 percent, outpacing Harvard, which returned -.05 percent. Princeton was also in the black in FY 2012, returning 3.1 percent. And last fiscal year, Yale, Stanford and Princeton each posted higher returns than HMC. </p>
 
                         <div class="highlight-trigger"></div>
