reverse scrolling fix

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -37,6 +37,7 @@
             <div class="byline"><span>By <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">CHRISTINE Y. CAHILL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">MATTHEW Q. CLARIDA</a></span></div>
             <div id='header-image'></div>
         </div>
+                <div class="hideGraph"></div>
                 <div id="article-contents" class="white">
                     <section>
                         <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
