context card updates

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -39,7 +39,7 @@
         </div>
                 <div id="article-contents" class="white">
                     <section>
-                        <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
+                        <p><span class="big-letter">P</span>erched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
          
                         <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the <a target="_blank" href="http://www.thecrimson.com/article/2014/2/19/largest-gift-college-history/"> largest gift announced so far </a> in the University’s <a target="_blank" href="http://www.thecrimson.com/article/2013/9/22/faust-capital-campaign-launch/">record-seeking</a> capital campaign.</p>
 
@@ -99,7 +99,6 @@
                                 <li>Increased endowment nearly fivefold, leaving it with a value of $25.9 billion</li>
                                 <li>Massive gains earned respect of alumni and University leaders</li>
                                 <li>Sparked a controversy with the lavish sums he paid his top managers</li>
-                                <li>Founded fixed income firm Convexity Capital Management after HMC</li>
                             </ul></div>
                             </div>
                         </div>
@@ -146,8 +145,6 @@
                                 <div class="context-quote-body"><ul>
                                     <li>Shortest termed non-interim CEO of HMC. Served Feb. 2006 until the end of 2007</li>
                                     <li>In only full fiscal year, generated 23 percent return</li>
-                                    <li>Known for expertise in emerging markets</li>
-                                    <li>Departed to return to the California investment management firm where he worked before coming to HMC</li>
                                     </ul>
                                 </div>
                             </div>
