fix minor annoyance

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -70,7 +70,7 @@
                     <section>
                         <div id="showGraph-1"></div>
                         <a class="section-anchor" id="golden-years"></a>
-                        <h2 class="section-title">The Golden Years: Jack Meyer And The 'Yale Model' </h2>
+                        <h2 class="section-title">The Golden Years: Jack Meyer And The &lsquo;Yale Model&rsquo; </h2>
 
 
 
