--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <div class="context-quote-header"><div class="context-quote-title context-quote-title-picless"><div>Harvard Management Company</div></div></div>
                                 <div class="context-quote-body"><ul>
                                     <li>Founded in 1974</li>
-                                    <li>Manages significant segment of endowment in-house, which is not the norm for Universities</li>
+                                    <li>Manages significant segment of endowment in-house, which is not the norm for universities</li>
                                     <li>Based in the Boston Federal Reserve Building</li> 
                                     <li>Special focus on alternative assets like real estate, natural resources, and private equity</li></ul></div>
                             </div>
