ads and social image

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic|Inconsolata:400,700|Playfair+Display+SC' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic|Playfair+Display+SC' rel='stylesheet' type='text/css'>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta property="og:image" content="http://features.thecrimson.com/2014/hmc/assets/img/social.png">
         <title>Has HMC Lost Its Edge? | Commencement 2014 | The Harvard Crimson</title>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -38,7 +39,7 @@
             <div id='header-image'></div>
         </div>
                 <div class="hideGraph"></div>
-                <div id="article-contents" class="white">
+                <div class="article-contents white">
                     <section>
                         <p><span class="big-letter">P</span>erched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
          
@@ -265,6 +266,18 @@
                     </div>
 
                     </section>
+                </div>
+                    
+                    <div class="pad-ad-tag ad-tag">Advertisement</div>   
+                    <div id="TheCrimson_AllArticles_ATF_728x90" class="leader-ad">
+                        <script type='text/javascript'>
+                            if ($(window).width() >= 728) {
+                                googletag.cmd.push(function() { googletag.display('TheCrimson_AllArticles_ATF_728x90'); });
+                            }
+                        </script>
+                    </div>
+
+                <div class="article-contents">
                     <section>
                         <div id="article-comments">
                               <div id="disqus_thread"></div>
