add meta viewport

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic|Playfair+Display+SC' rel='stylesheet' type='text/css'>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta property="og:image" content="http://features.thecrimson.com/2014/hmc/assets/img/social.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Has HMC Lost Its Edge? | Commencement 2014 | The Harvard Crimson</title>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
